--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.0.4",
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
