--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^5.0.4",
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
+    "icalendar": "^0.7.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
