chore: 修改自动化

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,11 @@
 name: Docker Build CI
 
 on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
   workflow_dispatch:
 
 env:
