--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "tronweb": "^4.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
