--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "swagger-ui-express": "^4.1.6",
+    "trongrid": "^1.2.6",
     "tronweb": "^4.0.1"
   },
   "devDependencies": {
