--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
