--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
+    "@types/nunjucks": "^3.2.1",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@types/validator": "*",
