--- a/package.json
+++ b/package.json
@@ -26,18 +26,22 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.0.4",
+    "connect-redis": "^6.1.3",
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "mysql2": "^2.2.5",
     "nunjucks": "^3.2.3",
-    "passport": "^0.4.1",
+    "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -49,10 +53,13 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
     "@types/nunjucks": "^3.2.1",
+    "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@types/validator": "*",
