--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -34,10 +33,10 @@
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
-    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "redis": "^4.3.0",
