--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
-    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
