--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
