--- a/package.json
+++ b/package.json
@@ -21,61 +21,63 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
+    "@nestjs/common": "^10.2.8",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.8",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/sequelize": "^9.0.2",
-    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.2.8",
+    "@nestjs/sequelize": "^10.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "connect-redis": "^6.1.3",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.10",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "geoip-lite": "^1.4.8",
     "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.2.0",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.34.0",
     "sequelize-typescript": "^2.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.4.1",
-    "@nestjs/schematics": "^9.1.0",
-    "@nestjs/testing": "^9.4.0",
-    "@types/connect-redis": "^0.0.20",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.0.0",
-    "@types/passport-local": "^1.0.34",
-    "@types/sequelize": "^4.28.10",
-    "@types/supertest": "^2.0.11",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.8",
+    "@types/connect-redis": "^0.0.23",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/geoip-lite": "^1.4.4",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/passport-local": "^1.0.38",
+    "@types/sequelize": "^4.28.18",
+    "@types/supertest": "^2.0.16",
     "@types/validator": "*",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "class-transformer": "0.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "27.0.6",
-    "prettier": "^2.3.2",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "29.7.0",
+    "prettier": "^3.0.3",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "~5.0.4",
-    "webpack": "5.76.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0"
   },
   "jest": {
     "moduleFileExtensions": [
