--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.2.8",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "body-parser": "^1.20.2",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.10",
     "express": "^4.17.1",
@@ -52,12 +53,15 @@
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.8",
+    "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.8",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^20.9.0",
+    "@types/passport": "^1.0.15",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.18",
     "@types/supertest": "^2.0.16",
