--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.8",
     "@types/lodash": "^4.14.201",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^20.9.0",
     "@types/passport": "^1.0.15",
     "@types/passport-local": "^1.0.38",
