--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-express": "^10.2.8",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "cheerio": "1.0.0-rc.12",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.10",
     "express": "^4.17.1",
