--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.8",
@@ -31,6 +32,7 @@
     "@nestjs/swagger": "^7.1.14",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
+    "cache-manager": "^5.3.1",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.10",
