--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cache-manager": "^5.3.1",
+    "cache-manager-ioredis-yet": "^1.2.2",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.10",
