--- a/package.json
+++ b/package.json
@@ -18,76 +18,78 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "up": "taze minor -I"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.1.1",
-    "@nestjs/common": "^10.2.8",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.2.8",
+    "@nestjs/cache-manager": "^2.2.1",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.8",
-    "@nestjs/sequelize": "^10.0.0",
-    "@nestjs/swagger": "^7.1.14",
-    "axios": "^1.6.2",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^7.3.0",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
-    "cache-manager": "^5.3.1",
+    "cache-manager": "^5.4.0",
     "cache-manager-ioredis-yet": "^1.2.2",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.10",
-    "express": "^4.17.1",
-    "express-session": "^1.17.3",
-    "geoip-lite": "^1.4.8",
-    "ioredis": "^5.2.3",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "geoip-lite": "^1.4.9",
+    "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "sequelize": "^6.34.0",
-    "sequelize-typescript": "^2.1.0",
+    "reflect-metadata": "^0.1.14",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.37.0",
+    "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.2.8",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
     "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/geoip-lite": "^1.4.4",
-    "@types/jest": "^29.5.8",
-    "@types/lodash": "^4.14.201",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.14.202",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^20.9.0",
-    "@types/passport": "^1.0.15",
+    "@types/node": "^20.11.17",
+    "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/sequelize": "^4.28.18",
-    "@types/supertest": "^2.0.16",
+    "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "*",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "29.7.0",
-    "prettier": "^3.0.3",
-    "supertest": "^6.1.3",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.0.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "taze": "^0.13.3",
+    "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1"
   },
   "jest": {
     "moduleFileExtensions": [
