chore: 添加alias，整理文件结构

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,14 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "~/*": ["src/*"],
+      "~types/*": ["src/types/*"],
+      "~core/*": ["src/core/*"],
+      "~modules/*": ["src/modules/*"],
+      "~entities/*": ["src/entities/*"],
+      "~utils/*": ["src/utils/*"]
+    }
   }
 }
