--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.3",
+    "@swc/cli": "^0.3.9",
+    "@swc/core": "^1.4.2",
     "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
