chore: 使用@antfu/eslint-config进行格式化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "target": "es2017",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": "./",
+    "module": "commonjs",
     "paths": {
       "~/*": ["src/*"],
       "~types/*": ["src/types/*"],
@@ -21,6 +13,14 @@
       "~modules/*": ["src/modules/*"],
       "~entities/*": ["src/entities/*"],
       "~utils/*": ["src/utils/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "declaration": true,
+    "outDir": "./dist",
+    "removeComments": true,
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
