--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "iszy-api",
+  "type": "module",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "ZvonimirSun",
-  "private": true,
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
-    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint": "eslint . --fix",
     "up": "taze minor -I"
   },
   "dependencies": {
@@ -56,6 +51,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.4",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.3",
@@ -73,18 +69,13 @@
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
-    "@types/supertest": "^6.0.2",
     "@types/validator": "*",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "jest": "29.7.0",
-    "prettier": "^3.2.5",
-    "supertest": "^6.3.4",
+    "globals": "^14.0.0",
     "taze": "^0.13.3",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
@@ -92,22 +83,5 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
