--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.3",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/sequelize": "^10.0.1",
@@ -35,7 +35,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
-    "geoip-lite": "^1.4.9",
+    "geoip-lite": "^1.4.10",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
@@ -43,10 +43,10 @@
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.14",
+    "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "sequelize": "^6.37.0",
+    "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.0"
   },
@@ -65,7 +65,7 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.11.19",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
@@ -80,6 +80,6 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
-    "webpack": "^5.90.1"
+    "webpack": "^5.90.3"
   }
 }
