--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "iszy-api",
-  "type": "module",
   "version": "1.0.0",
   "private": true,
   "description": "",
   "author": "ZvonimirSun",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main",
+    "start:prod": "node dist/main",
     "lint": "eslint . --fix",
     "up": "taze minor -I"
   },
