--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
-    "@types/validator": "*",
+    "@types/validator": "^13.11.9",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
+    "class-validator": "0.14.1",
     "eslint": "^8.56.0",
     "globals": "^14.0.0",
     "taze": "^0.13.3",
