--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
     "@types/mockjs": "^1.0.10",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.19",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
