--- a/package.json
+++ b/package.json
@@ -16,69 +16,70 @@
     "up": "taze minor -I"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.2.1",
-    "@nestjs/common": "^10.3.3",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.3.3",
-    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/cache-manager": "^2.3.0",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/sequelize": "^10.0.1",
-    "@nestjs/swagger": "^7.3.0",
-    "axios": "^1.6.7",
-    "body-parser": "^1.20.2",
-    "cache-manager": "^5.4.0",
+    "@nestjs/swagger": "^7.4.2",
+    "axios": "^1.8.1",
+    "body-parser": "^1.20.3",
+    "cache-manager": "^5.7.6",
     "cache-manager-ioredis-yet": "^1.2.2",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^6.1.3",
-    "dayjs": "^1.11.10",
-    "express": "^4.18.2",
-    "express-session": "^1.18.0",
+    "dayjs": "^1.11.13",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.5.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.2.1",
-    "rimraf": "^5.0.5",
-    "rxjs": "^7.8.1",
-    "sequelize": "^6.37.1",
+    "pg": "^8.13.3",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.2",
+    "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.4",
-    "@nestjs/cli": "^10.3.2",
-    "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.3",
-    "@swc/cli": "^0.3.9",
-    "@swc/core": "^1.4.2",
+    "@antfu/eslint-config": "^4.4.0",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.11.5",
     "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
+    "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.14.202",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^20.11.19",
-    "@types/passport": "^1.0.16",
+    "@types/node": "^22.13.9",
+    "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
-    "@types/validator": "^13.11.9",
+    "@types/validator": "^13.12.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "eslint": "^8.56.0",
-    "globals": "^14.0.0",
-    "taze": "^0.13.3",
-    "ts-jest": "^29.1.2",
-    "ts-loader": "^9.5.1",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
+    "taze": "^18.6.0",
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.3"
-  }
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0"
+  },
+  "packageManager": "pnpm@9.15.0"
 }
