--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "iszy-api",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@9.15.0",
   "description": "",
   "author": "ZvonimirSun",
   "license": "GPL-3.0",
@@ -80,6 +82,5 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0"
-  },
-  "packageManager": "pnpm@9.15.0"
+  }
 }
