--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.2",
     "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cache-manager": "^5.7.6",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -57,6 +58,7 @@
     "@nestjs/testing": "^10.4.15",
     "@swc/cli": "^0.5.0",
     "@swc/core": "^1.11.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
