--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mockjs": "^1.1.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
@@ -69,6 +70,7 @@
     "@types/mockjs": "^1.0.10",
     "@types/node": "^22.13.9",
     "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
     "@types/validator": "^13.12.2",
