--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iszy-api",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@10.6.2",
   "description": "",
   "author": "ZvonimirSun",
   "license": "GPL-3.0",
@@ -26,7 +26,7 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.2",
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cache-manager": "^5.7.6",
@@ -37,28 +37,28 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.3",
+    "pg": "^8.14.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2",
-    "sequelize": "^6.37.5",
+    "sequelize": "^6.37.6",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.4.0",
+    "@antfu/eslint-config": "^4.9.0",
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
-    "@swc/cli": "^0.5.0",
-    "@swc/core": "^1.11.5",
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.11.8",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/connect-redis": "^0.0.23",
@@ -68,7 +68,7 @@
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@types/passport": "^1.0.17",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-local": "^1.0.38",
@@ -76,14 +76,21 @@
     "@types/validator": "^13.12.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "globals": "^16.0.0",
-    "taze": "^18.6.0",
+    "taze": "^18.7.1",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@nestjs/core",
+      "@swc/core",
+      "bcrypt"
+    ]
   }
 }
