--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iszy-api",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@10.6.2",
+  "packageManager": "pnpm@10.6.5",
   "description": "",
   "author": "ZvonimirSun",
   "license": "GPL-3.0",
@@ -17,34 +17,35 @@
     "up": "taze minor -I"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.3.0",
-    "@nestjs/common": "^10.4.15",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.15",
+    "@keyv/redis": "^4.3.2",
+    "@nestjs/cache-manager": "^3.0.0",
+    "@nestjs/common": "^11.0.12",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.12",
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/sequelize": "^10.0.1",
-    "@nestjs/swagger": "^7.4.2",
-    "axios": "^1.8.2",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/swagger": "^11.0.7",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cache-manager": "^5.7.6",
-    "cache-manager-ioredis-yet": "^1.2.2",
+    "body-parser": "^2.0.0",
+    "cache-manager": "^6.4.1",
     "cheerio": "1.0.0-rc.12",
-    "connect-redis": "^6.1.3",
+    "connect-redis": "^8.0.2",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "ioredis": "^5.6.0",
+    "keyv": "^5.3.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "pg": "^8.14.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.2",
@@ -53,16 +54,15 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.9.0",
-    "@nestjs/cli": "^10.4.9",
-    "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.15",
-    "@swc/cli": "^0.5.2",
-    "@swc/core": "^1.11.8",
+    "@antfu/eslint-config": "^4.10.1",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.12",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.11.11",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
-    "@types/connect-redis": "^0.0.23",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.14",
@@ -78,7 +78,7 @@
     "class-validator": "0.14.1",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
-    "taze": "^18.7.1",
+    "taze": "^19.0.2",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
