--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cache-manager": "^6.4.1",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^8.0.2",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -62,6 +63,7 @@
     "@swc/core": "^1.11.11",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
