--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
+    "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.6.0",
     "keyv": "^5.3.2",
     "lodash": "^4.17.21",
