--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "connect-redis": "^8.0.2",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.6.0",
@@ -70,6 +71,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
