feat: 通用内容全部迁移到shared中，并统一通过~shared导出，简化结构，Logger使用统一logLevel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,8 @@
     "module": "commonjs",
     "paths": {
       "~/*": ["src/*"],
-      "~core/*": ["src/core/*"],
       "~domains/*": ["src/domains/*"],
-      "~types/*": ["src/shared/types/*"],
-      "~dto/*": ["src/shared/dto/*"],
-      "~utils/*": ["src/shared/utils/*"]
+      "~shared": ["src/shared"]
     },
     "resolveJsonModule": true,
     "declaration": true,
